src/main/java/com/example/demotest/core/errors/failures/concretes/TransformFailure.java
package com.example.demotest.core.errors.failures.concretes;

import com.example.demotest.core.errors.failures.Failure;

public final class TransformFailure extends Failure {
    public TransformFailure(String message) {
        super(message);
    }
}
